# sort-ilq1

.github/workflow/: ci.yml
sort_strings/: CMakeLists.txt  LICENSE  README.MD
sort_strings/include/: comparators.h  file_io.h  mmap_io.h  sortings.h  split_into_lines.h
sort_strings/src/: comparators.c  file_io.c  main.c  mmap_io.c
sort_strings/src/sortings/: bubble.c  insertion.c  merge.c  quick.c  radix.c
sort_strings/tests/: CMakeLists.txt  test_sort.c
